# sound-processor

./: CMakeLists.txt
config/: config1.txt  config2.txt  config3.txt
lib/: WAVparser.cpp
lib/WAV/: CMakeLists.txt
lib/WAV/include/: WAVExceptions.h  WAVReader.h  WAVWriter.h  WAV_reader.h  WAVfile.h
lib/WAV/src/: WAVExceptions.cpp  WAVFile.cpp  WAVReader.cpp  WAVWriter.cpp
lib/config_parser/: CMakeLists.txt
lib/config_parser/include/: config_parser.h
lib/config_parser/src/: config_parser.cpp
lib/converter/: CMakeLists.txt
lib/converter/include/: converter_creator.h  converters.h
lib/converter/src/: converter_creator.cpp  converters.cpp
lib/sound_processor/: CMakeLists.txt
lib/sound_processor/include/: sound_processor.h
lib/sound_processor/src/: sound_processor.cpp
src/: main.cpp
